# glasgae

./: Cargo.toml
crates/glasgae/: Cargo.toml
crates/glasgae-kiss/: Cargo.toml
crates/glasgae-macros/: Cargo.toml  build.rs
crates/glasgae-macros/src/: _do.rs  do.rs  infix.rs  lib.rs  op.rs  punct.rs
crates/glasgae-macros/src/derive/: functor.rs  mod.rs  pointed.rs  with_pointed.rs
crates/glasgae/examples/: turnstile.rs
crates/glasgae/src/: lib.rs  prelude.rs  zipper_cont.rs
crates/glasgae/src/base/: mod.rs
crates/glasgae/src/base/control/: applicative.rs  arrow.rs  category.rs  exception.rs  mod.rs  monad.rs
crates/glasgae/src/base/control/monad/: io.rs  mod.rs  morph.rs
crates/glasgae/src/base/control/zipper/: mod.rs  travel.rs  zip_travel.rs
crates/glasgae/src/base/data/: bifoldable.rs  bifoldable1.rs  bifunctor.rs  bipointed.rs  bitraversable.rs  boxed.rs  either.rs  foldable.rs  foldable1.rs  kinded.rs  maybe.rs  mod.rs  pointed.rs  semigroup.rs  term.rs  traversable.rs  with_bipointed.rs  with_kinded.rs  with_pointed.rs
crates/glasgae/src/base/data/collection/: mod.rs
crates/glasgae/src/base/data/either/: result.rs
crates/glasgae/src/base/grl/: bool.rs  do.rs  io.rs  lazy.rs  mod.rs  num.rs  read.rs  show.rs
crates/glasgae/src/logger/: indent.rs  mod.rs  state_logging.rs
crates/glasgae/src/logger/rust_logger/: mod.rs
crates/glasgae/src/mtl/: cont.rs  mod.rs  reader.rs  state.rs  writer.rs
crates/glasgae/src/transformers/: class.rs  cont.rs  errors.rs  except.rs  identity.rs  lift.rs  maybe.rs  mod.rs  reader.rs  state.rs  writer.rs
(+50 files in other folders)
