[package]
name = "glasgae"
version = "0.3.0"
edition = "2021"

[[example]]
name = "turnstile"
crate-type = ["bin"]

[features]
default=["log"]
log=["dep:log", "dep:env_logger"]

[dependencies]
glasgae-macros = { path = "../glasgae-macros" }

vector-map = { version = "1.0.1" }
log = { version = "0.4.21", optional = true }
env_logger = { version = "0.11.3", optional = true }
